# app

./: .env  Dockerfile  README.md  app.py  pyproject.toml  setup.py
.github/workflows/: pipy_release.yml  release.yml
backend/: app.py
backend/resources/: predictor.py
frontend/: index.html
remla24_team7_app/: app.py
src/: app.py
src/frontend/: index.html
