[tool.poetry]
name = "app"
version = "0.1.0"
description = "app"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.31.0"
# remla24-team7-libversion = { git = "https://github.com/remla24-team7/lib-version.git", branch = "automatic-versioning" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
