[tool.poetry]
name = "app"
version = "0.1.4"
description = "app"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.31.0"
remla24-team7-libversion = "^0.0.1"
prometheus-flask-exporter = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
